# crabstash

./: .gitignore  Makefile.toml  README.md  justfile  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/thesimplekid/crabstash/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: create_invoice.dart  home.dart  invoice_info.dart  lightning.dart  pay_invoice.dart  receive.dart  receive_token.dart  send.dart  settings.dart  token_info.dart
lib/shared/models/: invoice.dart  token.dart  transaction.dart
lib/shared/widgets/: receive_form.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/cashu/: Cargo.toml
native/cashu-ffi/: Cargo.toml  binding.h  build.rs
native/cashu-ffi/src/: lib.rs
native/cashu/src/: lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
